--- a/src/app/common/navbar/navbar.component.scss
+++ b/src/app/common/navbar/navbar.component.scss
@@ -5,20 +5,20 @@
   width: 100%;
   z-index: 9999;
   display: flex;
-  padding-top: 10px;
+  padding-top: 1rem;
   justify-content: space-between;
   align-items: center;
   &__list {
     list-style: none;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 600;
     display: flex;
-    padding: 14px;
+    padding: 1.4rem;
     margin: 0;
     font-family: myarabicfont;
   }
   &__item {
-    padding-right: 35px;
+    padding-right: 3.5rem;
     position: relative;
     color: $white;
     cursor: pointer;
@@ -35,9 +35,69 @@
       position: absolute;
       width: 2px;
       height: 100%;
-      right: 15px;
+      right: 1.5rem;
       top: 0;
       background-color: $white;
+    }
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  .navigation {
+    position: absolute;
+    flex-wrap: wrap;
+    width: 100%;
+    z-index: 9999;
+    display: flex;
+    padding-top: 1rem;
+    justify-content: space-between;
+    align-items: center;
+
+    svg {
+      width: 7rem !important;
+      margin-right: 0 !important;
+    }
+
+    svg-icon {
+      display: block;
+      margin: auto;
+    }
+
+    &__list {
+      list-style: none;
+      font-size: 1.8rem;
+      font-weight: 600;
+      display: flex;
+      padding: 1.4rem;
+      margin: 0;
+      width: 100%;
+      align-items: center;
+      margin-top: 1rem;
+      justify-content: center;
+    }
+    &__item {
+      padding-right: 22;
+      position: relative;
+      color: $white;
+      font-size: 0.7rem;
+      cursor: pointer;
+      font-weight: 400;
+
+      &.active {
+        background: linear-gradient(to left, $primary, $dark-primary);
+        background-clip: text;
+        color: transparent;
+        font-weight: bold;
+      }
+
+      & .pipeline {
+        position: absolute;
+        width: 1px;
+        height: 2rem;
+        transform: translateY(-15%);
+        top: 0;
+        background-color: $white;
+      }
     }
   }
 }
