--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,14 +2,14 @@
 
 .contact {
   min-height: 100vh;
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 9rem;
+  padding-bottom: 9rem;
   background: linear-gradient(to left, $primary, $dark-primary);
 
   &__navbar {
     background-color: #1d1d1b;
     position: absolute;
-    height: 90px;
+    height: 9rem;
     top: 0;
     left: 0;
     width: 100%;
@@ -20,13 +20,13 @@
     align-items: center;
     width: 80%;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 5rem;
     position: relative;
   }
 
   h2 {
     color: white;
-    font-size: 50px;
+    font-size: 5rem;
   }
 
   &__chat {
@@ -46,11 +46,11 @@
 
     button {
       background-color: $white;
-      padding: 15px 70px;
+      padding: 1.5rem 7rem;
       display: inline-block;
-      border-radius: 40px 0 40px 40px;
-      margin-top: 20px;
-      font-size: 22px;
+      border-radius: 4rem 0 4rem 4rem;
+      margin-top: 1rem;
+      font-size: 2.2rem;
       font-weight: 600;
       color: #575756;
     }
@@ -62,18 +62,18 @@
     align-items: flex-end;
     button {
       background-color: $white;
-      padding: 15px 70px;
+      padding: 1.5rem 7rem;
       display: inline-block;
-      border-radius: 0 40px 40px 40px;
-      margin-top: 20px;
-      font-size: 22px;
+      border-radius: 0 4rem 4rem 4rem;
+      margin-top: 1rem;
+      font-size: 2.2rem;
       font-weight: 600;
       color: #575756;
     }
   }
 
   &__line {
-    height: 250px;
+    height: 25rem;
     width: 1px;
     border-right: 1px solid $white;
     position: absolute;
@@ -85,7 +85,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 140px;
+    margin-top: 14rem;
     justify-content: center;
   }
 
@@ -94,8 +94,8 @@
     background-color: transparent;
     border: 2px solid $white;
     width: 50%;
-    margin: 10px 0;
-    padding: 10px;
+    margin: 1rem 0;
+    padding: 1rem;
     color: $white;
 
     &::placeholder {
@@ -111,12 +111,64 @@
 
   &__form-button {
     background-color: $white;
-    padding: 15px 70px;
+    padding: 1.5rem 7rem;
     display: inline-block;
-    border-radius: 40px 0 40px 40px;
-    margin-top: 20px;
-    font-size: 22px;
+    border-radius: 4rem 0 4rem 4rem;
+    margin-top: 1rem;
+    font-size: 2.2rem;
     font-weight: 600;
     color: #575756;
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  .contact {
+    &__heading {
+      width: 90%;
+      justify-content: center;
+    }
+
+    h2 {
+      color: white;
+      font-size: 1.2rem;
+    }
+
+    &__chat {
+      button {
+        padding: 0.5rem 1rem;
+        font-size: 1.3rem;
+      }
+    }
+
+    &__phone {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      button {
+        padding: 0.5rem 1rem;
+        font-size: 1.3rem;
+      }
+    }
+
+    &__input {
+      width: 90%;
+    }
+
+    &__form-button {
+      background-color: $white;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      border-radius: 1rem 0 1rem 1rem;
+    }
+
+    &__line {
+      height: 4rem;
+      width: 1px;
+      border-right: 1px solid $white;
+      position: absolute;
+      left: 50%;
+      bottom: -0.8rem;
+      transform: translateX(-50%);
+    }
   }
 }
