--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 .home {
-  padding: 30px;
+  padding: 3rem;
   background: url(../../assets/images/background.png);
   min-height: 100vh;
   background-repeat: no-repeat;
