--- a/src/app/home/searh-results/modal/modal.component.scss
+++ b/src/app/home/searh-results/modal/modal.component.scss
@@ -1,8 +1,8 @@
 @import "/src/styles/variables.scss";
 
 .info-modal {
-  height: 350px;
-  padding: 40px 80px;
+  height: 35rem;
+  padding: 4rem 8rem;
   display: flex;
   justify-content: center;
   background: linear-gradient(to left, $primary, $dark-primary);
@@ -11,24 +11,24 @@
     color: $white;
     line-height: 1.6;
 
-    font-size: 16px;
+    font-size: 1.6rem;
   }
 
   &__title {
     color: $white;
-    font-size: 35px;
+    font-size: 3.5rem;
     unicode-bidi: bidi-override !important;
     direction: unset !important;
     text-align: right;
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
     font-weight: 700;
   }
 
   &__chevron {
-    width: 100px;
-    height: 100px;
+    width: 10rem;
+    height: 10rem;
     border-radius: 50%;
-    margin: 10px 35px 0px 0;
+    margin: 1rem 3.5rem 0px 0;
     position: absolute;
     left: 0;
     top: 0;
@@ -37,28 +37,28 @@
   }
 
   &__list {
-    margin: 0 0px 0 -15px;
-    font-size: 16px;
+    margin: 0 0px 0 -1.5rem;
+    font-size: 1.6rem;
     unicode-bidi: bidi-override !important;
     direction: unset !important;
     text-align: right;
-    margin-right: 20px;
+    margin-right: 2rem;
     line-height: 1.6;
   }
 
   &__img {
-    height: 280px;
-    width: 280px;
+    height: 28rem;
+    width: 28rem;
   }
 
   &__save {
     position: absolute;
     display: flex;
     align-items: center;
-    right: 10px;
+    right: 1rem;
     color: $white;
-    font-size: 18px;
-    top: 10px;
+    font-size: 1.8rem;
+    top: 1rem;
     cursor: pointer;
   }
 }
