--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -1,9 +1,9 @@
 @import "/src/styles/variables.scss";
 .stats {
   height: 100vh;
-  padding-top: 90px;
+  padding-top: 9rem;
   background: url("../../assets/images/makhfe\ a3zam.png") #1d1d1b;
-  background-position: -200px -150px;
+  background-position: -20rem -15rem;
   background-repeat: no-repeat;
 
   &__imgs {
@@ -13,13 +13,13 @@
 
   &__img {
     position: absolute;
-    height: 630px;
+    height: 6.3rem;
   }
 
   &__info {
     display: flex;
     align-items: flex-start;
-    padding: 40px;
+    padding: 4rem;
     background-color: #c2c2c2;
   }
 
@@ -37,7 +37,7 @@
 
   &__percentage {
     text-align: center;
-    font-size: 250px;
+    font-size: 25rem;
     background: linear-gradient(to left, lighten($primary, 5), $dark-primary);
     display: flex;
     flex-direction: column;
@@ -62,7 +62,7 @@
     &-symbol {
       display: block;
       color: $black;
-      font-size: 60px;
+      font-size: 6rem;
       position: absolute;
       bottom: 20%;
       left: 66%;
@@ -86,13 +86,13 @@
   &__description {
     margin: 0;
     width: 100%;
-    font-size: 25px;
+    font-size: 2.5rem;
     color: $black;
-    margin-top: -60px;
+    margin-top: -6rem;
     font-weight: 600;
 
     &--period {
-      font-size: 19px;
+      font-size: 1.9rem;
       color: $white;
     }
   }
@@ -101,7 +101,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 100px;
+    margin-top: 10rem;
     flex-wrap: wrap;
 
     &--period {
@@ -140,7 +140,7 @@
 
     &-pink,
     &-black {
-      width: 80px;
+      width: 8rem;
       position: relative;
 
       &--period {
@@ -151,7 +151,7 @@
 
     &-pink {
       background: linear-gradient(to left, $primary, $dark-primary);
-      margin-left: 10px;
+      margin-left: 1rem;
 
       &--period {
         background: none;
@@ -161,7 +161,7 @@
 
     &-black {
       background-color: $black;
-      margin-right: 10px;
+      margin-right: 1rem;
     }
 
     &-value {
@@ -170,7 +170,7 @@
       left: 50%;
       transform: translate(-50%, -130%);
       font-weight: 600;
-      font-size: 18px;
+      font-size: 1.8rem;
       &--period {
         color: $white;
       }
@@ -182,24 +182,24 @@
 
     p {
       text-align: center;
-      margin-top: 10px;
-      font-size: 20px;
+      margin-top: 1rem;
+      font-size: 2rem;
       font-weight: bold;
-      height: 40px;
+      height: 4rem;
     }
 
     &--period {
       p {
         color: $white !important;
         font-weight: 500 !important;
-        font-size: 16px !important;
+        font-size: 1.6rem !important;
       }
     }
 
     &--id {
       p {
         font-weight: 500 !important;
-        font-size: 16px !important;
+        font-size: 1.6rem !important;
       }
     }
 
@@ -209,7 +209,7 @@
       justify-content: center;
 
       div {
-        margin: 0 40px;
+        margin: 0 4rem;
       }
     }
 
@@ -220,10 +220,10 @@
       font-weight: 700;
 
       span {
-        height: 23px;
-        width: 23px;
+        height: 2.3rem;
+        width: 2.3rem;
         display: block;
-        margin-left: 10px;
+        margin-left: 1rem;
       }
       &-pink {
         background: linear-gradient(to left, $primary, $dark-primary);
@@ -236,7 +236,7 @@
 
   &__period {
     background: linear-gradient(to left, $primary, $dark-primary);
-    padding: 40px;
+    padding: 4rem;
     display: flex;
     position: relative;
     flex-wrap: wrap;
@@ -282,7 +282,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 80px;
+    padding: 2rem 8rem;
 
     &-info {
       width: 40%;
@@ -298,7 +298,7 @@
       }
 
       p {
-        font-size: 17px;
+        font-size: 1.7rem;
       }
     }
 
@@ -308,7 +308,7 @@
 
       &::after {
         content: "";
-        height: 10px;
+        height: 1rem;
         width: 100%;
         position: absolute;
         bottom: 0;
@@ -328,15 +328,15 @@
     flex-direction: column;
     align-items: center;
     background-color: #1d1d1b;
-    padding: 40px 0;
+    padding: 4rem 0;
     &-chart {
-      height: 27px;
+      height: 2.7rem;
       background-color: red;
       position: relative;
 
       span {
         position: absolute;
-        margin-right: 10px;
+        margin-right: 1rem;
         top: 50%;
         transform: translateY(-50%);
         color: $white;
@@ -344,7 +344,7 @@
     }
 
     &-title {
-      width: 230px;
+      width: 23rem;
       margin-left: 20px;
       color: $white;
     }
@@ -380,7 +380,7 @@
   }
 
   &__social {
-    padding: 40px;
+    padding: 4rem;
     background: linear-gradient(to bottom, $white, #bebebe);
     &-section {
       display: flex;
@@ -395,13 +395,267 @@
         unicode-bidi: bidi-override !important;
         direction: unset !important;
         text-align: right;
-        font-size: 17px;
+        font-size: 1.7rem;
       }
     }
 
     &-description {
-      padding: 30px 0;
+      padding: 3rem 0;
       width: 100% !important;
+    }
+  }
+}
+
+@media only screen and(max-width : 414px) {
+  .stats {
+    background-size: contain;
+    background-position: unset;
+    background-position-y: 20rem;
+
+    &__img {
+      display: none;
+    }
+
+    &__info {
+      flex-direction: column;
+    }
+
+    &__article {
+      width: 100%;
+      font-size: 1.2rem;
+    }
+
+    &__numbers {
+      width: 100%;
+    }
+
+    &__chart {
+      align-items: flex-end;
+    }
+
+    &__percentage {
+      text-align: center;
+      font-size: 15rem;
+      background: linear-gradient(to left, lighten($primary, 5), $dark-primary);
+      display: flex;
+      flex-direction: column;
+      background-clip: text;
+      color: transparent;
+      font-weight: bold;
+      position: relative;
+      justify-content: flex-start;
+      margin-bottom: 0;
+
+      &--social {
+        width: 100%;
+        margin-bottom: 1rem;
+      }
+
+      &--period {
+        color: $white;
+      }
+
+      &--social {
+        color: $black;
+      }
+      &-symbol {
+        display: block;
+        color: $black;
+        font-size: 4rem;
+        position: absolute;
+        bottom: 30%;
+        left: 66%;
+
+        &--period {
+          left: 68%;
+          color: $white;
+        }
+
+        &--social {
+          left: 65%;
+          bottom: 34%;
+        }
+
+        &--social2 {
+          left: 80%;
+          bottom: 39%;
+        }
+      }
+    }
+
+    &__description {
+      margin: 0;
+      width: 100%;
+      font-size: 1.7rem;
+      color: $black;
+      font-weight: 600;
+
+      &--period {
+        font-size: 1.9rem;
+        color: $white;
+      }
+    }
+
+    &__period {
+      flex-direction: column;
+
+      &::after {
+        content: "";
+        display: block;
+        width: 53%;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        border-bottom: 1px solid $white;
+        position: absolute;
+      }
+
+      &-numbers {
+        width: 100%;
+      }
+
+      &-description {
+        width: 100%;
+        margin-top: 1.5rem;
+      }
+    }
+
+    &__chart {
+      &--period {
+        width: 100%;
+        margin: auto;
+        flex-wrap: nowrap;
+        align-items: flex-end;
+
+        & > div {
+          width: 10.1%;
+          align-items: center;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
+      &--id {
+        flex-wrap: nowrap;
+        align-items: flex-end;
+        & > div {
+          align-items: center;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
+      &-container {
+        display: flex;
+        flex-direction: column;
+      }
+
+      &-preview {
+        display: flex;
+        align-items: flex-end;
+      }
+
+      &-pink,
+      &-black {
+        width: 4rem;
+        margin-left: 0;
+      }
+
+      &-value {
+        font-size: 1.2rem;
+      }
+
+      &--period {
+        p {
+          color: $white !important;
+          font-weight: 500 !important;
+          font-size: 1.1rem !important;
+        }
+      }
+
+      &--id {
+        p {
+          font-weight: 500 !important;
+          font-size: 0.8rem !important;
+        }
+      }
+
+      &-info {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+
+        div {
+          margin: 0 4rem;
+        }
+      }
+    }
+
+    &__period-chart {
+      padding: 1rem;
+      padding-bottom: 2rem;
+      padding-top: 5rem;
+    }
+
+    &__period2 {
+      flex-direction: column;
+      padding: 1rem;
+
+      &-info {
+        width: 100%;
+        p,
+        h2 {
+          unicode-bidi: bidi-override !important;
+          direction: unset !important;
+          text-align: right;
+        }
+
+        h2 {
+          font-weight: 600;
+          font-size: 1.5rem;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+      }
+
+      &-chart {
+        width: 100%;
+      }
+    }
+
+    &__relations {
+      &-container {
+        flex-direction: column;
+      }
+
+      &-title {
+        text-align: right;
+        margin: 0.5rem 0;
+      }
+    }
+
+    &__social {
+      &-section {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+
+      article {
+        width: 100%;
+
+        p {
+          font-size: 1.2rem;
+        }
+      }
+
+      &-description {
+        padding: 3rem 0;
+        width: 100% !important;
+      }
     }
   }
 }
