--- a/src/app/common/navbar/navbar.component.scss
+++ b/src/app/common/navbar/navbar.component.scss
@@ -42,7 +42,7 @@
   }
 }
 
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 768px) {
   .navigation {
     position: absolute;
     flex-wrap: wrap;
@@ -80,6 +80,66 @@
       position: relative;
       color: $white;
       font-size: 0.7rem;
+      cursor: pointer;
+      font-weight: 400;
+
+      &.active {
+        background: linear-gradient(to left, $primary, $dark-primary);
+        background-clip: text;
+        color: transparent;
+        font-weight: bold;
+      }
+
+      & .pipeline {
+        position: absolute;
+        width: 1px;
+        height: 2rem;
+        transform: translateY(-15%);
+        top: 0;
+        background-color: $white;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .navigation {
+    position: absolute;
+    flex-wrap: wrap;
+    width: 100%;
+    z-index: 9999;
+    display: flex;
+    padding-top: 1rem;
+    justify-content: space-between;
+    align-items: center;
+
+    svg {
+      width: 15rem !important;
+      margin-right: 0 !important;
+    }
+
+    svg-icon {
+      display: block;
+      margin: auto;
+    }
+
+    &__list {
+      list-style: none;
+      font-size: 2.7rem;
+      font-weight: 600;
+      display: flex;
+      padding: 1.4rem;
+      margin: 0;
+      width: 100%;
+      align-items: center;
+      margin-top: 1rem;
+      justify-content: center;
+    }
+    &__item {
+      padding-right: 22;
+      position: relative;
+      color: $white;
+      font-size: 2.1rem;
       cursor: pointer;
       font-weight: 400;
 
