--- a/src/app/statistics/statistics.component.scss
+++ b/src/app/statistics/statistics.component.scss
@@ -13,7 +13,7 @@
 
   &__img {
     position: absolute;
-    height: 6.3rem;
+    height: 90.4vh;
   }
 
   &__info {
@@ -406,7 +406,7 @@
   }
 }
 
-@media only screen and(max-width : 414px) {
+@media only screen and(max-width : 768px) {
   .stats {
     background-size: contain;
     background-position: unset;
@@ -655,6 +655,126 @@
       &-description {
         padding: 3rem 0;
         width: 100% !important;
+      }
+    }
+  }
+}
+@media only screen and(max-width : 992px) {
+  .stats {
+    background-size: contain;
+    background-position: unset;
+
+    &__article {
+      width: 100%;
+      font-size: 1.2rem;
+    }
+
+    &__img {
+      display: none;
+    }
+
+    &__numbers {
+      width: 100%;
+    }
+
+    &__chart {
+      align-items: flex-end;
+    }
+
+    &__percentage {
+      &--period {
+        color: $white;
+        font-size: 14rem !important;
+      }
+    }
+
+    &__description {
+      font-size: 1.7rem;
+
+      &--period {
+        font-size: 1.1rem;
+        margin-top: 0;
+      }
+    }
+
+    &__period-chart {
+      padding: 8rem 4rem;
+    }
+
+    &__chart {
+      &-value {
+        font-size: 1.5rem;
+      }
+      &-container {
+        &--period {
+          width: 7.1% !important;
+        }
+      }
+
+      &--period {
+        width: 100%;
+        justify-content: space-between;
+        p {
+          color: $white !important;
+          font-weight: 500 !important;
+          font-size: 1.5rem !important;
+        }
+      }
+
+      &--id {
+        width: 100%;
+        p {
+          font-weight: 500 !important;
+          font-size: 1.2rem !important;
+        }
+      }
+    }
+
+    &__period2 {
+      flex-direction: column;
+      padding: 2rem !important;
+
+      &-info {
+        width: 100%;
+        p,
+        h2 {
+          unicode-bidi: bidi-override !important;
+          direction: unset !important;
+          text-align: right;
+        }
+
+        h2 {
+          font-weight: 600;
+          font-size: 1.7rem;
+        }
+
+        p {
+          font-size: 1.2rem;
+        }
+      }
+    }
+
+    &__social {
+      article {
+        p {
+          font-size: 1.4rem;
+        }
+      }
+
+      &-description {
+        padding: 3rem 0;
+      }
+    }
+
+    &__relations {
+      overflow-x: hidden;
+      &-container {
+        flex-direction: column;
+      }
+
+      &-title {
+        text-align: right;
+        margin: 0.5rem 0;
       }
     }
   }
